--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
@@ -49,7 +50,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section content4 cid-rZlFoaOLM6" id="content4-7">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section content4 cid-rZlFoaOLM6" id="content4-7">
 
     
 
@@ -240,7 +241,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VjH7Nj4DgzADrbASBswkpi3XV8AfrlWUbcm4ZJZbVHMaSnoKO8S2QmEIDS5y4rQtNd3wOGj2+Pe/XeewZlVKjdKC2QSCAEHWfez9DJX8WVu7Yyr1vJ7sbuhWvwM59B/K">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4/NfTcaGgr7LCUD1JQT9r7owOAkPwXc5E1pEO19iD5V9xp43Lf5o8KpburTDRpZwI1EJT95kcsCygESIOfXdxg0YLkCx/gkJUSIG2xkrfkMgrxuFWFz84lbMdrqQ8mLb">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci de votre demande. Je reviens vers vous dans les meilleurs délais</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -261,7 +262,11 @@
                                 </div>
                                 <div class="col-md-12 input-group-btn"><button type="submit" class="btn btn-form btn-danger display-4">ENVOYEZ</button></div>
                             </div>
-                        </form><!---Formbuilder Form--->
+                        <span class="gdpr-block">
+<label>
+<span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-header15-1e" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
+</label>
+</span></form><!---Formbuilder Form--->
                     </div>
                 </div>
             </div>
