--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/index-meta.jpeg">
   <meta property="og:image" content="assets/images/index-meta.jpeg">
-  <meta name="twitter:title" content="L'EXPERIENCE 360">
+  <meta name="twitter:title" content="STUDIO AR-VR-360">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
   <meta name="description" content="">
   
   
-  <title>L'EXPERIENCE 360</title>
+  <title>STUDIO AR-VR-360</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="header1 cid-s8wKc5HKD1 mbr-fullscreen mbr-parallax-background" id="header16-g">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header1 cid-s8wKc5HKD1 mbr-fullscreen mbr-parallax-background" id="header16-g">
 
     
 
