--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-s8wKc5HKD1 mbr-fullscreen mbr-parallax-background" id="header16-g">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header1 cid-s8wKc5HKD1 mbr-fullscreen mbr-parallax-background" id="header16-g">
 
     
 
